# skills-demo-catalog

./: .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: skill-enhancement.yml  task-api-enhancement.yml
.github/agents/: skill-maintainer.md
.github/workflows/: ci-benchmark.yml  copilot-assign.yml  copilot-setup-steps.yml  service-ci.yml  service-deploy.yml  service-publish.yml  task-api-enhancement-triage.lock.yml  task-api-enhancement-triage.md
benchmarks/: agent_benchmark.py
benchmarks/specs/task-api-helper/: bulk-add-comment-retry.json
service/: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
service/app/: main.py  models.py  seed_data.py  state.py
service/app/routers/: health.py  tasks.py
service/tests/: test_api.py
skills/release-readiness-check/: SKILL.md
skills/release-readiness-check/references/: REQUEST-TRACKING.md
skills/task-api-helper/: .env.example  SKILL.md
skills/task-api-helper/references/: API.md  IMPROVEMENT-PROCESS.md
skills/task-api-helper/scripts/: task_cli.py
tests/: benchmark_bulk.py  conftest.py  mock_api_server.py  test_agent_benchmark.py  test_task_cli.py
