[project]
name = "skills-demo-catalog"
version = "0.1.0"
description = "Skill catalog tests and benchmark harness for task-api-helper"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "github-copilot-sdk>=0.3.0,<0.4",
    "pytest>=8.0,<10.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
